--- a/devflow/devflow2025112310274313/overlays/prod/kustomization.yaml
+++ b/devflow/devflow2025112310274313/overlays/prod/kustomization.yaml
@@ -7,6 +7,6 @@ configMapGenerator:
     namespace: app
     files:
       - config.yaml
-    behavior: replace
+    behavior: create
 patchesStrategicMerge:
   - deployment-patch.yaml
