--- a/devflow/devflow2025122107212089/base/service.yaml
+++ b/devflow/devflow2025122107212089/base/service.yaml
@@ -10,4 +10,5 @@ spec:
     - protocol: TCP
       port: 8080       # 对外暴露端口
       targetPort: 8080 # Pod 容器端口
+      name: http
   type: ClusterIP      # 默认 ClusterIP，也可以改成 LoadBalancer
